Harden USPS browser execution